# jobscraper

./: .gitignore  CLAUDE.md  README.md  analyze_ats.py  analyze_extraction.py  compare_runs.py  debug_extraction.py  jobs_db.backup2.json  jobs_db.json  jobs_db.json.backup  pyproject.toml  requirements.txt  show_results.py  show_results_fixed.py  test_ats_api.py  test_playwright.py  test_workday_api.py
src/jobscraper/: __init__.py  ai_extractor.py  ats_fetcher.py  main.py  scraper.py  storage.py
tests/: __init__.py  test_scraper.py
